--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,7 +9,8 @@
                 "-g",
                 "${file}",
                 "-o",
-                "${fileDirname}\\${fileBasenameNoExtension}.exe"
+                "${fileDirname}\\${fileBasenameNoExtension}.exe",
+                "-std=c++11",
             ],
             "options": {
                 "cwd": "D:\\Program Files\\msys64\\ucrt64\\bin"
@@ -28,7 +29,8 @@
         {
             "type": "cppbuild",
             "label": "C/C++: gcc.exe build active file with Python2.7",
-            "command": "D:\\Program Files\\msys64\\ucrt64\\bin\\g++.exe",
+            // "command": "D:\\Program Files\\msys64\\ucrt64\\bin\\g++.exe",
+            "command": "D:\\Program Files\\msys64\\mingw64\\bin\\g++.exe",
             "args": [
                 "-fdiagnostics-color=always",
                 "-g",
@@ -42,11 +44,15 @@
                 "D:\\Users\\guido\\miniconda3\\envs\\robond_py27\\Lib\\site-packages\\numpy\\core\\include",
                 "-L",
                 "D:\\Users\\guido\\miniconda3\\envs\\robond_py27\\libs",
-                "-l",
-                "python27",
+                "-lpython27",
+                "-std=c++11",
+                "-static-libgcc",  // Add this flag to ensure correct linking
+                "-lmsvcrt",  // Add MSVCRT linking
+                "-D__MSVCRT__=1"  // Add the define flag for correct symbol linkage
             ],
             "options": {
-                "cwd": "D:\\Program Files\\msys64\\ucrt64\\bin"
+                // "cwd": "D:\\Program Files\\msys64\\ucrt64\\bin",
+                "cwd": "D:\\Program Files\\msys64\\mingw64\\bin",
             },
             "problemMatcher": [
                 "$gcc"
