--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -32,27 +32,27 @@
             // "command": "D:\\Program Files\\msys64\\ucrt64\\bin\\g++.exe",
             "command": "D:\\Program Files\\msys64\\mingw64\\bin\\g++.exe",
             "args": [
-                "-fdiagnostics-color=always",
+                "-std=c++11",
                 "-g",
                 "${file}",
                 "-o",
                 "${fileDirname}\\${fileBasenameNoExtension}.exe",
+                "-fdiagnostics-color=always",
+                "-lpython27",
                 "-I",
-                //"D:\\Program Files\\msys64\\ucrt64\\include\\python3.12",
+                // "D:\\Program Files\\msys64\\ucrt64\\include\\python3.12",
                 "D:\\Users\\guido\\miniconda3\\envs\\robond_py27\\include", // conda env "robond_py27"
                 "-I",
                 "D:\\Users\\guido\\miniconda3\\envs\\robond_py27\\Lib\\site-packages\\numpy\\core\\include",
                 "-L",
                 "D:\\Users\\guido\\miniconda3\\envs\\robond_py27\\libs",
-                "-lpython27",
-                "-std=c++11",
-                "-static-libgcc",  // Add this flag to ensure correct linking
-                "-lmsvcrt",  // Add MSVCRT linking
-                "-D__MSVCRT__=1"  // Add the define flag for correct symbol linkage
+                // "-static-libgcc",  // Add this flag to ensure correct linking
+                // "-lmsvcrt",  // Add MSVCRT linking
+                // "-D__MSVCRT__=1"  // Add the define flag for correct symbol linkage
             ],
             "options": {
-                // "cwd": "D:\\Program Files\\msys64\\ucrt64\\bin",
-                "cwd": "D:\\Program Files\\msys64\\mingw64\\bin",
+                "cwd": "D:\\Program Files\\msys64\\ucrt64\\bin",
+                // "cwd": "D:\\Program Files\\msys64\\mingw64\\bin",
             },
             "problemMatcher": [
                 "$gcc"
